@startuml
skinparam groupInheritance 2
skinparam linetype polyline

package httpclient{
interface IStatusComm {
    + updateGame(gameState: String)
    + getGameState(): String
    + hostGame(gameTitle: String): String
    + listGames(): String
    + joinGame(serverToJoin: String): String
    + leaveGame()
}

class GameService {
    ~ servers: ArrayList
    - finderServer(serverId: String): Game
}
class ServerController {
    + createGame(s String): String
    + listOfGame(): String
    + joinGame(id: String): String
    + leaveGame(id: String, robot: String)
    + getGameState(id: String): String
    + setGameState(id: String, gameState: String): String

}
class Game {
    + addPlayer()
    + removePlayer()
    + isEmpty(): boolean
    + getAmountOfPlayers(): int
    + getGameState(): String
    + setGameState
    + getId(): String
    + getMaxAmountOfPlayers(): int
    + getARobot(): int
    + setPlayerSpotFilled(i: int, flag: boolean)
}

IStatusComm <|.l.GameService : \t\t
IStatusComm <..ServerController : Uses
GameService -- Game
}

@enduml